feat: Tarih güncellemesi ve favicon optimizasyonu
- 1997'den beri → 2025'ten beri olarak güncellendi
- Ana logodan favicon dosyaları oluşturuldu
- HTML meta tags'lerde tarih güncellendi
- Structured data'da founding date güncellendi
- Tüm sayfalarda tutarlı tarih bilgisi sağlandı

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Sağlam Delme & Patlatma | Güvenli Sondaj ve Patlatma Hizmetleri</title>
     <meta name="title" content="Sağlam Delme & Patlatma | Güvenli Sondaj ve Patlatma Hizmetleri">
-    <meta name="description" content="1997'den beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
+    <meta name="description" content="2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
     <meta name="keywords" content="delme hizmetleri, patlatma hizmetleri, sondaj, taş ocağı patlatma, şehir içi patlatma, su altı patlatma, MWD, danışmanlık, güvenli patlatma, kontrollü patlatma">
     <meta name="author" content="Sağlam Delme & Patlatma">
     <meta name="robots" content="index, follow">
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://saglam-delme-patlatma.netlify.app/">
     <meta property="og:title" content="Sağlam Delme & Patlatma | Güvenli Sondaj ve Patlatma Hizmetleri">
-    <meta property="og:description" content="1997'den beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
+    <meta property="og:description" content="2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
     <meta property="og:image" content="https://saglam-delme-patlatma.netlify.app/images/logo.jpeg">
     <meta property="og:site_name" content="Sağlam Delme & Patlatma">
     <meta property="og:locale" content="tr_TR">
@@ -27,7 +27,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://saglam-delme-patlatma.netlify.app/">
     <meta property="twitter:title" content="Sağlam Delme & Patlatma | Güvenli Sondaj ve Patlatma Hizmetleri">
-    <meta property="twitter:description" content="1997'den beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
+    <meta property="twitter:description" content="2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
     <meta property="twitter:image" content="https://saglam-delme-patlatma.netlify.app/images/logo.jpeg">
     
     <!-- Additional SEO Meta Tags -->
@@ -63,8 +63,8 @@
       "alternateName": "Sağlam Delme ve Patlatma",
       "url": "https://saglam-delme-patlatma.netlify.app",
       "logo": "https://saglam-delme-patlatma.netlify.app/images/logo.jpeg",
-      "description": "1997'den beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri sunan uzman firma.",
-      "foundingDate": "1997",
+      "description": "2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri sunan uzman firma.",
+      "foundingDate": "2025",
       "address": {
         "@type": "PostalAddress",
         "addressCountry": "TR",
