Deploy: saglam-tr.com custom domain ile güncel sitemap ve robots.txt

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="Turkish">
     <meta name="revisit-after" content="7 days">
+    <meta name="google-site-verification" content="B0RCh2U7lmlCYtcG-1EzG3LztQmhvZGRKZY5mVNppno" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
