Optimize SEO for Rıza Sağlam and Sağlam Delme searches
- Add Rıza Sağlam and Sağlam Delme to meta keywords
- Update meta description to include Rıza Sağlam leadership
- Add founder information to structured data (JSON-LD)
- Include Rıza Sağlam as Person schema with job title and description
- Update sitemap.xml with team page priority boost
- Fix favicon files to proper square dimensions (16x16, 32x32, 180x180)
- Add comprehensive favicon meta tags for better recognition
- Optimize for 'Rıza Sağlam' and 'Sağlam Delme' search queries

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <!-- Primary Meta Tags -->
     <title>Sağlam Delme & Patlatma | Güvenli Sondaj ve Patlatma Hizmetleri</title>
     <meta name="title" content="Sağlam Delme & Patlatma | Güvenli Sondaj ve Patlatma Hizmetleri">
-    <meta name="description" content="2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
-    <meta name="keywords" content="delme hizmetleri, patlatma hizmetleri, sondaj, taş ocağı patlatma, şehir içi patlatma, su altı patlatma, MWD, danışmanlık, güvenli patlatma, kontrollü patlatma">
+    <meta name="description" content="Rıza Sağlam liderliğindeki Sağlam Delme & Patlatma, 2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri sunuyor. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
+    <meta name="keywords" content="Rıza Sağlam, Sağlam Delme, Sağlam Delme Patlatma, delme hizmetleri, patlatma hizmetleri, sondaj, taş ocağı patlatma, şehir içi patlatma, su altı patlatma, MWD, danışmanlık, güvenli patlatma, kontrollü patlatma, patlayıcı mühendisi, jeoloji mühendisi">
     <meta name="author" content="Sağlam Delme & Patlatma">
     <meta name="robots" content="index, follow">
     <meta name="language" content="Turkish">
@@ -43,9 +43,11 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="msapplication-TileImage" content="/apple-touch-icon.png">
     
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
@@ -64,8 +66,14 @@
       "alternateName": "Sağlam Delme ve Patlatma",
       "url": "https://saglam-tr.com",
       "logo": "https://saglam-tr.com/images/logo.jpeg",
-      "description": "2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri sunan uzman firma.",
+      "description": "Rıza Sağlam liderliğindeki Sağlam Delme & Patlatma, 2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri sunan uzman firma.",
       "foundingDate": "2025",
+      "founder": {
+        "@type": "Person",
+        "name": "Rıza Sağlam",
+        "jobTitle": "Kurucu & Genel Müdür",
+        "description": "Jeoloji Mühendisi ve Patlayıcı Mühendisliği Yüksek Lisans mezunu, 10+ yıl deneyimli patlatma uzmanı"
+      },
       "address": {
         "@type": "PostalAddress",
         "addressCountry": "TR",
