--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
     <meta property="twitter:image" content="https://saglam-tr.com/images/logo.jpeg">
     
     <!-- Additional SEO Meta Tags -->
-    <meta name="theme-color" content="#9ACD32">
-    <meta name="msapplication-TileColor" content="#9ACD32">
+    <meta name="theme-color" content="#1B2645">
+    <meta name="msapplication-TileColor" content="#1B2645">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Sağlam Delme & Patlatma">
