JPEG referanslarını WebP formatına güncelle - Tüm görseller WebP formatına geçirildi

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://saglam-tr.com/">
     <meta property="og:title" content="Sağlam Delme & Patlatma | Güvenli Sondaj ve Patlatma Hizmetleri">
     <meta property="og:description" content="2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
-    <meta property="og:image" content="https://saglam-tr.com/images/logo.jpeg">
+    <meta property="og:image" content="https://saglam-tr.com/images/Logo/logo.webp">
     <meta property="og:site_name" content="Sağlam Delme & Patlatma">
     <meta property="og:locale" content="tr_TR">
     
@@ -29,7 +29,7 @@
     <meta property="twitter:url" content="https://saglam-tr.com/">
     <meta property="twitter:title" content="Sağlam Delme & Patlatma | Güvenli Sondaj ve Patlatma Hizmetleri">
     <meta property="twitter:description" content="2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri. Taş ocağı, şehir içi ve su altı patlatma projelerinde uzman ekibimizle hizmetinizdeyiz.">
-    <meta property="twitter:image" content="https://saglam-tr.com/images/logo.jpeg">
+    <meta property="twitter:image" content="https://saglam-tr.com/images/Logo/logo.webp">
     
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#1B2645">
@@ -65,7 +65,7 @@
       "name": "Sağlam Delme & Patlatma",
       "alternateName": "Sağlam Delme ve Patlatma",
       "url": "https://saglam-tr.com",
-      "logo": "https://saglam-tr.com/images/logo.jpeg",
+      "logo": "https://saglam-tr.com/images/Logo/logo.webp",
       "description": "Rıza Sağlam liderliğindeki Sağlam Delme & Patlatma, 2025'ten beri güvenli ve profesyonel delme, patlatma ve danışmanlık hizmetleri sunan uzman firma.",
       "foundingDate": "2025",
       "founder": {
